--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "target": "ES6",
     "lib": ["ES2019", "DOM.Iterable", "dom"],
     "types": ["node"],
+    "typeRoots": ["./src/types"],
     "module": "commonjs",
     "declaration": true,
     "strict": true,
